# processing-playground

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/car/: car.pde  class.pde
src/class2/: test.py
src/multi_zoogs/: multi_zoogs.pde  zoog.pde
src/snake_following_mouse/: snake_following_mouse.pde
src/sol_lewitt/: Makefile  __main__.py
src/test/: test.pde
