[tool.poetry]
name = "processing-playground"
version = "0.1.0"
description = ""
authors = ["Aiden Huang <ahuang9688@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
py5 = "^0.8.0-alpha.2"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
flake8-isort = "*"
flake8-black = "*"
flake8-formatter-junit-xml = "*"
flake8-codeclimate = "*"
pyproject-flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
float_to_top = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
combine_as_imports = true

[tool.black]
line-length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


[tool.flake8]
max-line-length = 90
output-file = "qa_reports/flake8"
tee = true
max-complexity = 10

#per-file-ignores
extend-ignore = """
     C901,  # Function is too complex
     W503,  # Line break occurred before a binary operator
     E203,  # Whitespace before ':' - Black disagrees, so go with black
    """
exclude ="""
    build,
    dist,
    env,
    ext,
    docs,
    scripts,
    qa_reports,
    tox.ini,
    __pycache__,
    .git,
    .tox,
    .eggs,
    .venv,
    .poetry
    """
